[gd_scene load_steps=8 format=3]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="1_ivx4h"]
[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Command_List_Forms/Dialog_EventInputForm.gd" id="2_c5mqh"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="3_h33vw"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="4_i1cdv"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Dialog.tscn" id="5_ol278"]
[ext_resource type="PackedScene" uid="uid://dlthmlrbks64q" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Popup_Delete_Confirm.tscn" id="6_hfxxd"]
[ext_resource type="PackedScene" uid="uid://c1klfol683pf1" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_deleteKey.tscn" id="8_1mjeo"]

[node name="Dialog_EventInputForm" type="Control" groups=["Tab"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ivx4h")
script = ExtResource("2_c5mqh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Dialog"
horizontal_alignment = 1

[node name="TrueorFalse" parent="Control/VBoxContainer" instance=ExtResource("4_i1cdv")]
layout_mode = 2
size_flags_vertical = 3
true_text = "Single"
false_text = "Group"
label_text = "Single or Group Dialog Input"
is_label_button = false

[node name="Input" parent="Control/VBoxContainer/TrueorFalse/Hbox1/Background" index="0"]
offset_top = -12.0
offset_bottom = 12.0
button_pressed = true
text = "Single"

[node name="KeyDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_h33vw")]
visible = false
layout_mode = 2
selection_table_name = "Dialog Groups"
label_text = "Select Group"
is_label_button = false

[node name="Label_Button" parent="Control/VBoxContainer/KeyDropdown/Label/HBox1" index="0"]
text = "Select Group"

[node name="Input" parent="Control/VBoxContainer/KeyDropdown" index="1"]
item_count = 1
selected = 0
popup/item_0/text = "First Interaction"
popup/item_0/id = 0

[node name="input_dialog" parent="Control/VBoxContainer" instance=ExtResource("5_ol278")]
layout_mode = 2

[node name="Label" parent="Control/VBoxContainer/input_dialog" index="1"]
custom_minimum_size = Vector2(0, 25)

[node name="CharacterName_HBox" parent="Control/VBoxContainer/input_dialog" index="2"]
custom_minimum_size = Vector2(0, 100)

[node name="CharacterName_Checkbox" parent="Control/VBoxContainer/input_dialog/CharacterName_HBox" index="0"]
custom_minimum_size = Vector2(150, 0)

[node name="Input" parent="Control/VBoxContainer/input_dialog/CharacterName_HBox/CharacterName_Checkbox/Hbox1/Background" index="0"]
offset_top = -12.0
offset_bottom = 12.0
button_pressed = true
text = "List"

[node name="CharacterName_Text" parent="Control/VBoxContainer/input_dialog/CharacterName_HBox" index="2"]
visible = false

[node name="IconSelection_Checkbox" parent="Control/VBoxContainer/input_dialog/IconSelection_HBox" index="0"]
custom_minimum_size = Vector2(150, 0)

[node name="Input" parent="Control/VBoxContainer/input_dialog/IconSelection_HBox/IconSelection_Checkbox/Hbox1/Background" index="0"]
offset_top = -12.0
offset_bottom = 12.0
text = "Icon"

[node name="SceneSelection_Checkbox" parent="Control/VBoxContainer/input_dialog/SceneSelection_HBox" index="0"]
custom_minimum_size = Vector2(150, 0)

[node name="Input" parent="Control/VBoxContainer/input_dialog/SceneSelection_HBox/SceneSelection_Checkbox/Hbox1/Background" index="0"]
offset_top = -12.0
offset_bottom = 12.0
button_pressed = true
text = "Default"

[node name="Scene_Selection_ScenePath" parent="Control/VBoxContainer/input_dialog/SceneSelection_HBox" index="1"]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"

[node name="Cancel" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[node name="Popups" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 0.866667)

[node name="FileSelect" type="Control" parent="Popups"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ListInput" type="Control" parent="Popups"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Popup_Delete_Confirm" parent="Popups" instance=ExtResource("6_hfxxd")]
visible = false
layout_mode = 1

[node name="PanelContainer" parent="Popups/Popup_Delete_Confirm" index="0"]
layout_mode = 0
anchors_preset = 0

[node name="VBoxContainer" parent="Popups/Popup_Delete_Confirm/PanelContainer" index="0"]
layout_mode = 2

[node name="Label" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="Label2" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Accept_Button" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="Cancel_Button" parent="Popups/Popup_Delete_Confirm/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[node name="popup_deleteKey" parent="Popups" instance=ExtResource("8_1mjeo")]
visible = false
layout_mode = 1

[node name="PanelContainer" parent="Popups/popup_deleteKey" index="0"]
layout_mode = 0
anchors_preset = 0

[node name="VBoxContainer" parent="Popups/popup_deleteKey/PanelContainer" index="0"]
layout_mode = 2

[node name="Label" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="Itemlist" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="32198" type="VScrollBar" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/Itemlist" index="1"]
layout_mode = 0

[node name="HBoxContainer" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Accept" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="Cancel" parent="Popups/popup_deleteKey/PanelContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2

[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Control/VBoxContainer/TrueorFalse"]
[editable path="Control/VBoxContainer/KeyDropdown"]
[editable path="Control/VBoxContainer/KeyDropdown/Label"]
[editable path="Control/VBoxContainer/input_dialog"]
[editable path="Control/VBoxContainer/input_dialog/CharacterName_HBox/CharacterName_Checkbox"]
[editable path="Control/VBoxContainer/input_dialog/IconSelection_HBox/IconSelection_Checkbox"]
[editable path="Control/VBoxContainer/input_dialog/SceneSelection_HBox/SceneSelection_Checkbox"]
[editable path="Popups/Popup_Delete_Confirm"]
[editable path="Popups/popup_deleteKey"]
